--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "cookie": "^0.4.1",
     "dotenv": "^10.0.0",
     "mongoose": "^6.0.12"
