--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@sveltejs/adapter-node": "^1.0.0-next.55",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
-    "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
@@ -31,11 +30,12 @@
   },
   "type": "module",
   "dependencies": {
-    "@lukeed/uuid": "^2.0.0",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.1",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "uuid": "^8.3.2"
   }
 }
