--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.1",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "mongoose": "^6.0.13",
     "uuid": "^8.3.2"
